[package]
name = "dns-SoH"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
hex = "0.4.3"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["tokio-macros", "full"] }
